# ai-fs-agent

./: .gitignore  README.md  main.py  main_streaming.py  pyproject.toml  requirements.txt
ai_fs_agent/agents/: __init__.py  classify_agent.py  fs_agent.py  git_agent.py  local_config_agent.py  supervisor_agent.py  tagging_llm.py
ai_fs_agent/config/: __init__.py  logging_config.py  paths_config.py  user_config.py
ai_fs_agent/config/templates/: __init__.py  env_template.py  llm_models_toml_template.py  model_toml_templates.py
ai_fs_agent/llm/: __init__.py  llm_manager.py
ai_fs_agent/llm_services/: __init__.py  image_llm.py  tagging_llm.py  web_search_llm.py
ai_fs_agent/tools/: __init__.py  classify_tools.py  delegate_tools.py  fs_tools.py  git_tools.py  loacl_config_tools.py  rag_tools.py
ai_fs_agent/utils/: check_workspace_dir.py  file_info.py  fs_apply.py  fs_query.py  fs_utils.py  path_safety.py  workspace.py
ai_fs_agent/utils/classify/: batch_file_tagger.py  image_llm.py  label_service.py  tag_service.py  tagging_llm.py
ai_fs_agent/utils/fs/: fs_apply.py  fs_query.py
ai_fs_agent/utils/git/: __init__.py  git_history.py  git_repo.py  git_utils.py
ai_fs_agent/utils/ingest/: file_content_model.py  file_loader.py  text_processor.py
ai_fs_agent/utils/rag/: batch_index_builder.py  embedding_checker.py  huey_worker.py  index_builder.py  index_store.py  rag_tasks.py  vector_retriever.py
